--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -37,6 +37,10 @@
     <%= f.text_field :city %>
   </div>
   <div class="field">
+    <%= f.label :postal_code %><br />
+    <%= f.text_field :postal_code %>
+  </div>
+  <div class="field">
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
