--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Listings#index</h1>
-<p>Find me in app/views/listings/index.html.erb</p>
+<% @listings.each do |listing| %>
+
+	<%= link_to listing.address, "/listings/#{listing.id}" %>
+
+<% end %>
