Adding user id to listing table and formatting listings/show page.

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,1 +1,11 @@
-<%= @listing.address %>
+
+<p><%= @listing.user.first_name %> <%= @listing.user.last_name %></p>
+<p><%= @listing.address %></p>
+<p><%= @listing.bedrooms %></p>
+<p><%= @listing.bathrooms %></p>
+<p><%= @listing.price %></p>
+<p><%= @listing.square_feet %></p>
+<p><%= @listing.city %></p>
+<p><%= @listing.postal_code %></p>
+<p><%= @listing.description %></p>
+
